# DynamicLearnedIndex

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.builder  Dockerfile.python-experiments  README.dev.md  README.md  TODO.md  bentley_saxe.py  bliss.py  bucket.py  build.sh  build_result.py  cli.py  configuration.py  dummy.py  dynamic_bucket.py  dynamic_learned_index.py  environment.yml  experiment_search_result.py  framework.py  framework_compaction_statistics.py  framework_search_statistics.py  index.py  internal_learned_index.py  labeled_dataset.py  leveling.py  lmi.py  main.py  plots.py  pyproject.toml  requirements.txt  result.py  ruff.toml  run-without-shrinking.sh  run.sh  rust-toolchain.toml  sampling.py  (+4 more)
.cargo/: config.toml
.github/workflows/: ci.yml  publish-crates.yml  publish-docker.yml  publish-pypi.yml
bucket/: __init__.py  bucket.py  dynamic.py  static.py
cli_dynamic_learned_index/: Cargo.toml
cli_dynamic_learned_index/benches/: index_benchmarks.rs  kmeans_benchmarks.rs
cli_dynamic_learned_index/examples/: performance_test.rs  profiler.rs
cli_dynamic_learned_index/src/: config.rs  dataset.rs  eval.rs  main.rs
compaction_strategy/: __init__.py  bentley_saxe.py  leveling.py
comparison/: 20250801.rust_impl.csv  20250802.rust_impl.csv  20250812.rust_impl.csv  20250926.python_impl.csv  20251003.4.rust_impl.csv  20251024.rust_impl.csv
config/: __init__.py  david.py  dli.py  experiment.py  index.py  metacentrum.py  pro.py  search.py
configs/: example.yaml  python_vers.yaml
data/example/: config.yaml  data.h5  gt.h5  queries.h5
dynamic_learned_index/: Cargo.toml
dynamic_learned_index/benches/: index_benchmarks.rs  kmeans_benchmarks.rs  knn_benchmark.rs  model_benchmark.rs
dynamic_learned_index/examples/: performance_test.rs  profiler.rs
dynamic_learned_index/src/: bucket.rs  candle_model.rs  clustering.rs  cold_storage.rs  config.rs  constants.rs  distance_fn.rs  errors.rs  index.rs  level_index.rs  lib.rs  model.rs  sampling.rs  search_strategy.rs  structs.rs  types.rs  util.rs
dynamic_learned_index/src/model/: candle_model.rs  features.rs  mix_model.rs  mod.rs  tch_model.rs
execution_environment/: __init__.py  david.py  detect.py  environment.py  metacentrum.py  pro.py
experiments/: cli.py  config.py  datasets.py  execution_environment.py  run-faiss-hnsw.py  run-hnswlib-hnsw-bulk.py  run-hnswlib-hnsw-incremental.py  run-hnswlib-hnsw.py  run-hnswlib.py  run.py  run.sh
experiments/execution_environment/: __init__.py  david.py  environment.py  metacentrum.py  pro.py
experiments/scripts/: run-100M.sh  run-10M.sh  run-300K.sh  run-bs-100M.sh  run-bs-10M.sh  run-bs-300K.sh  run-hnswlib-hnsw-32CPUs-100M.sh  run-hnswlib-hnsw-bulk-32CPUs-100M.sh  run-hnswlib-hnsw-incremental-1CPU-100M.sh  run-leveling-100M.sh  run-leveling-10M.sh  run.sh
learned_index/: __init__.py  bliss.py  learned_index.py  learned_metric_index.py
measure_time_macro/: Cargo.toml
measure_time_macro/src/: lib.rs
model_translation/: .gitignore  Cargo.toml  README.md  buckets_meta.json  dump_pytorch_model.py  load_bucket_data.py  load_candle_model.py  pyproject.toml
model_translation/src/: main.rs
py_dynamic_learned_index/: .dockerignore  .gitignore  Cargo.toml  README.md  environment.yml  example.py  pyproject.toml
py_dynamic_learned_index/py_dynamic_learned_index/: __init__.py  wrapper.py
py_dynamic_learned_index/src/: lib.rs
python-experiments-uv/: pyproject.toml
scripts/: analyze_metrics.py  compare2python.py  python_impl.csv
service/: .env.example  Cargo.toml  README.md
service/configs/: example.yaml  minimal.yaml
service/src/: main.rs
src/dli/: cli.py  dummy.py  dynamic_learned_index.py  faiss_facade.py  result.py  sampling.py  statistic.py  utils.py
src/dli/bucket/: __init__.py  bucket.py  dynamic.py  static.py
src/dli/compaction_strategy/: __init__.py  bentley_saxe.py  leveling.py
src/dli/config/: __init__.py  bucket_shape.py  dataset.py  distance.py  dli.py  experiment.py  index.py  search.py
src/dli/learned_index/: __init__.py  bliss.py  learned_index.py  learned_metric_index.py
src/dli/visualization/: plots.py
visualization/: plots.py
visualizer/: Cargo.toml
visualizer/assets/: index.html  script.js
visualizer/src/: main.rs
