[workspace]
resolver = "2"
members = [
    "cli_dynamic_learned_index", 
    "dynamic_learned_index", 
    "measure_time_macro",
    "py_dynamic_learned_index",
]

# Size optimization for release builds - applies to all workspace members
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
