[package]
name = "cli_dynamic_learned_index"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.97" }
clap = { version = "4.5.32", features = ["derive"] }
dotenvy = "0.15.7"
dynamic_learned_index = { path = "../dynamic_learned_index" }
hdf5 = { package = "hdf5-metno", version = "0.9.0" }
serde = "1.0.219"
serde_yaml = "0.9.34"
structured-logger = "1.0.3"
tch = { version = "0.19.0" }
