[package]
name = "dynamic_learned_index"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
log = { version = "0.4.27", features = ["kv"] }
measure_time_macro = { path = "../measure_time_macro" }
once_cell = "1.21.3"
rand = "0.9.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tch = { version = "0.19.0" }
kmeans = { version = "2.0.0" }
kentro = { version = "0.1.0" }
rayon = { version = "1.10.0" }
simsimd = { version = "6.4.9" }
ndarray = "0.16.1"
