[package]
name = "py_dynamic_learned_index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_dynamic_learned_index"
crate-type = ["cdylib"]

[dependencies]
dynamic_learned_index = { path = "../dynamic_learned_index", features = ["pyo3"] }
numpy = { version = "0.22.0" }
pyo3 = { version = "0.22.0", features = ["extension-module"]  }