[package]
name = "py_dynamic_learned_index"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_dynamic_learned_index"
crate-type = ["cdylib"]

[dependencies]
dynamic_learned_index = { path = "../dynamic_learned_index", default-features = false }
numpy = { version = "0.27.0" }
pyo3 = { version = "0.27.0", features = ["extension-module"]  }
structured-logger = { version = "1.0.3", default-features = false }
log = { version = "0.4.27", features = ["kv"] }
half = "2.7.1"

[features]
default = ["mix"]
measure_time = ["dynamic_learned_index/measure_time"]
mkl = ["dynamic_learned_index/mkl"]
tch = ["dynamic_learned_index/tch", "dynamic_learned_index/pyo3"]
candle = ["dynamic_learned_index/candle", "dynamic_learned_index/pyo3"]
mix = ["dynamic_learned_index/mix", "dynamic_learned_index/pyo3"]
