[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "py_dynamic_learned_index"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=2.0.2",
    "torch==2.6.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
repair-wheel-command = [
    "auditwheel",
    "repair",
    "--exclude", "libtorch.so",
    "--exclude", "libtorch_cpu.so",
    "--exclude", "libc10.so",
    "--exclude", "libshm.so",
    "--exclude", "libtorch_python.so",
    "-w", "{dest_dir}",
    "{wheel}"
]

[dependency-groups]
dev = [
    "maturin[patchelf]>=1.11.5",
    "ruff",
    "ziglang>=0.15.1",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

