[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "py_dynamic_learned_index"
description = "Python bindings for Dynamic Learned Index - efficient approximate nearest neighbor search using learned models"
readme = "README.md"
license = {text = "LGPL-3.0-or-later"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = []

[dependency-groups]
dev = [
    "numpy>=2.0.2",
    "maturin[patchelf]>=1.11.5",
    "ruff",
    "ziglang>=0.15.1",
    "torch==2.6.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "py_dynamic_learned_index._pydli"


[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
